--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="home" id="home">
+        <div id="navbar" class="navbar">
+            <div id="brand_name" class="brand_name">
+                <h3 id="myname" class="myname">Therance</h3>
+            </div>
+            <div class="nav_controls_links">
+                <a href="#" rel="noopener noreferrer" class="link1_accueil">Accueil</a>
+                <a href="#" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
+                <a href="#" rel="noopener noreferrer" class="link3_contact">Contact</a>
+            </div>
+        </div>
+        <div class="content">
+            <p class="home_hook">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio atque vitae et 
+                minima sit sed eveniet cupiditate voluptatem eius aspernatur rem quis similique architecto 
+                dolorem harum dolorum, consequatur vel accusantium ab eaque itaque, eos magni. Deleniti 
+                labore culpa beatae quaerat quasi fuga qui ullam tenetur eius voluptatum modi quae 
+                voluptates deserunt, laboriosam rerum reprehenderit laborum nulla vero. Quia, inventore 
+                voluptatum! Est harum, molestiae quia magnam doloremque explicabo nesciunt ullam eveniet 
+                perferendis fugit quibusdam hic voluptate, unde odit optio doloribus sunt tenetur itaque 
+                ex? Mollitia uos culpa, expedita maxime ab dicta asperiores porro excepturi, sed iusto iste 
+                fugit, placeat veritatis.
+            </p>
+            <a href="#">Learn more...</a>
+        </div>
+    </div>
 
     <script src="js/scripts.js"></script>
 </body>
