Ajout d'attribut id et name dans certains tags HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="content">
-            <p class="home_hook">
+            <p id="home_hook" class="home_hook">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio atque vitae et 
                 minima sit sed eveniet cupiditate voluptatem eius aspernatur rem quis similique architecto 
                 dolorem harum dolorum, consequatur vel accusantium ab eaque itaque, eos magni. Deleniti 
@@ -30,7 +30,7 @@
                 ex? Mollitia uos culpa, expedita maxime ab dicta asperiores porro excepturi, sed iusto iste 
                 fugit, placeat veritatis.
             </p>
-            <a href="#">Learn more...</a>
+            <a name="learn_more" href="#">Learn more...</a>
         </div>
     </div>
 
