--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My BLOG</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="home" id="home">
@@ -17,23 +18,28 @@
                 <a href="#" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
                 <a href="#" rel="noopener noreferrer" class="link3_contact">Contact</a>
             </div>
+            <div class="social_network">
+                <a href="http://" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><i class='bx bxl-facebook-square'></i></a>
+            </div>
         </div>
         <div class="content">
-            <p id="home_hook" class="home_hook">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio atque vitae et 
-                minima sit sed eveniet cupiditate voluptatem eius aspernatur rem quis similique architecto 
-                dolorem harum dolorum, consequatur vel accusantium ab eaque itaque, eos magni. Deleniti 
-                labore culpa beatae quaerat quasi fuga qui ullam tenetur eius voluptatum modi quae 
-                voluptates deserunt, laboriosam rerum reprehenderit laborum nulla vero. Quia, inventore 
-                voluptatum! Est harum, molestiae quia magnam doloremque explicabo nesciunt ullam eveniet 
-                perferendis fugit quibusdam hic voluptate, unde odit optio doloribus sunt tenetur itaque 
-                ex? Mollitia uos culpa, expedita maxime ab dicta asperiores porro excepturi, sed iusto iste 
-                fugit, placeat veritatis.
-            </p>
-            <a name="learn_more" href="#">Learn more...</a>
+            <div class="main_content">
+                <p id="home_hook" class="home_hook">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio atque vitae et 
+                    minima sit sed eveniet cupiditate voluptatem eius aspernatur rem quis similique architecto 
+                    dolorem harum dolorum, consequatur vel accusantium ab eaque itaque, eos magni. Deleniti 
+                    labore culpa beatae quaerat quasi fuga qui ullam tenetur eius voluptatum modi quae 
+                    voluptates deserunt, laboriosam rerum reprehenderit laborum nulla vero. Quia, inventore 
+                    voluptatum! Est harum, molestiae quia magnam doloremque explicabo nesciunt ullam eveniet 
+                    perferendis fugit quibusdam hic voluptate, unde odit optio doloribus sunt tenetur itaque 
+                    ex? Mollitia uos culpa, expedita maxime ab dicta asperiores porro excepturi, sed iusto iste 
+                    fugit, placeat veritatis.
+                </p>
+                <a name="learn_more" href="#">Learn more...</a>
+            </div>
         </div>
     </div>
-
     <script src="js/scripts.js"></script>
 </body>
 </html>
