--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="home" id="home">
         <div id="navbar" class="navbar">
             <div id="brand_name" class="brand_name">
-                <h3 id="myname" class="myname">Therance</h3>
+                <a href="index.html" id="myname" class="myname">Therance</a>
             </div>
             <div class="nav_controls_links">
                 <a href="#" rel="noopener noreferrer" class="link1_accueil">Accueil</a>
@@ -26,15 +26,7 @@
         <div class="content">
             <div class="main_content">
                 <p id="home_hook" class="home_hook">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio atque vitae et 
-                    minima sit sed eveniet cupiditate voluptatem eius aspernatur rem quis similique architecto 
-                    dolorem harum dolorum, consequatur vel accusantium ab eaque itaque, eos magni. Deleniti 
-                    labore culpa beatae quaerat quasi fuga qui ullam tenetur eius voluptatum modi quae 
-                    voluptates deserunt, laboriosam rerum reprehenderit laborum nulla vero. Quia, inventore 
-                    voluptatum! Est harum, molestiae quia magnam doloremque explicabo nesciunt ullam eveniet 
-                    perferendis fugit quibusdam hic voluptate, unde odit optio doloribus sunt tenetur itaque 
-                    ex? Mollitia uos culpa, expedita maxime ab dicta asperiores porro excepturi, sed iusto iste 
-                    fugit, placeat veritatis.
+                    👋 Salut ! Je suis Thérance MOUTOUAMA, un passionné de l'informatique avec une ambition de devenir Développeur Web FullStack, Createur de Contenu ,Concepteur Logiciel/Application Mobile/Jeu, et expert en Intelligence Artificielle. 🎓 Actuellement en formation, je me consacre à l’apprentissage et à la maîtrise des technologies modernes pour créer des solutions innovantes et efficaces.
                 </p>
                 <a name="learn_more" href="#">Learn more...</a>
             </div>
