Stop let goo do something

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="index.html" id="myname" class="myname">Therance</a>
             </div>
             <div class="nav_controls_links">
-                <a href="#" rel="noopener noreferrer" class="link1_accueil">Accueil</a>
+                <a href="index.html" rel="noopener noreferrer" class="link1_accueil">Accueil</a>
                 <a href="#" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
                 <a href="#" rel="noopener noreferrer" class="link3_contact">Contact</a>
             </div>
