Tentative de activelink avec Js : (Echec)

--- a/pages/About.html
+++ b/pages/About.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+<body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My BLOG</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -15,8 +24,8 @@
             </div>
             <div class="nav_controls_links">
                 <a href="index.html" rel="noopener noreferrer" class="link1_accueil">Accueil</a>
-                <a href="./pages/About.html" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
-                <a href="/pages/Contact.html" rel="noopener noreferrer" class="link3_contact">Contact</a>
+                <a href="About.html" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
+                <a href="Contact.html" rel="noopener noreferrer" class="link3_contact">Contact</a>
             </div>
             <div class="social_network">
                 <a href="http://" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram-alt'></i></a>
@@ -33,5 +42,7 @@
         </div>
     </div>
     <script src="js/scripts.js"></script>
+</body>
+</html>
 </body>
 </html>
