--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -15,8 +15,8 @@
             </div>
             <div class="nav_controls_links">
                 <a href="index.html" rel="noopener noreferrer" class="link1_accueil">Accueil</a>
-                <a href="./pages/About.html" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
-                <a href="/pages/Contact.html" rel="noopener noreferrer" class="link3_contact">Contact</a>
+                <a href="About.html" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
+                <a href="Contact.html" rel="noopener noreferrer" class="link3_contact">Contact</a>
             </div>
             <div class="social_network">
                 <a href="http://" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram-alt'></i></a>
