Essaie d'animation d'ouverture de porte (echec)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p id="home_hook" class="home_hook">
                     👋 Salut ! Je suis Thérance MOUTOUAMA, un passionné de l'informatique avec une ambition de devenir Développeur Web FullStack, Createur de Contenu ,Concepteur Logiciel/Application Mobile/Jeu, et expert en Intelligence Artificielle. 🎓 Actuellement en formation, je me consacre à l’apprentissage et à la maîtrise des technologies modernes pour créer des solutions innovantes et efficaces.
                 </p>
-                <a id="learn_more" name="learn_more" href="#">Learn more...</a>
+                <a id="learn_more" name="learn_more" href="./pages/About.html">Learn more...</a>
             </div>
         </div>
     </div>
