--- a/pages/About.html
+++ b/pages/About.html
@@ -17,31 +17,16 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="home" id="home">
-        <div id="navbar" class="navbar">
-            <div id="brand_name" class="brand_name">
-                <a href="index.html" id="myname" class="myname">Therance</a>
-            </div>
-            <div class="nav_controls_links">
-                <a href="index.html" rel="noopener noreferrer" class="link1_accueil">Accueil</a>
-                <a href="About.html" rel="noopener noreferrer" class="link2_a_propos">A propos</a>
-                <a href="Contact.html" rel="noopener noreferrer" class="link3_contact">Contact</a>
-            </div>
-            <div class="social_network">
-                <a href="http://" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="http://" target="_blank" rel="noopener noreferrer"><i class='bx bxl-facebook-square'></i></a>
-            </div>
+    <div class="container">
+        <div class="home left-door">
+
         </div>
-        <div class="content">
-            <div class="main_content">
-                <p id="home_hook" class="home_hook">
-                    👋 Salut ! Je suis Thérance MOUTOUAMA, un passionné de l'informatique avec une ambition de devenir Développeur Web FullStack, Createur de Contenu ,Concepteur Logiciel/Application Mobile/Jeu, et expert en Intelligence Artificielle. 🎓 Actuellement en formation, je me consacre à l’apprentissage et à la maîtrise des technologies modernes pour créer des solutions innovantes et efficaces.
-                </p>
-                <a id="learn_more" name="learn_more" href="#">Learn more...</a>
-            </div>
+        <div class="home right-door">
+
         </div>
+        <p>Thérance</p>
     </div>
-    <script src="js/scripts.js"></script>
+    <script src="../js/About.js"></script>
 </body>
 </html>
 </body>
